[package]
name = "glass"
version = "0.1.0"
authors = ["Anthony Wilcox <35226681+tonytins@users.noreply.github.com>"]
edition = "2018"

[dependencies]
bootloader = "0.7"
volatile = "0.2"
spin = "0.5"
x86_64 = "0.7"
uart_16550 = "0.2"
[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33